refactor: extract /api route; swagger-autogen
