# src/resources/ingredients/ingredient.service.ts
@@ -1,0 +1,22 @@
+import { IngredientDocument } from 'src/interfaces/mongoose.gen';
+import mongoose from 'mongoose';
+import ingredientsRepo from './ingredient.repo';
+import Ingredient from './ingredient.model';
+
+const getId = mongoose.Types.ObjectId;
+
+export const getAll = (): Promise<IngredientDocument[]> => ingredientsRepo.getAll();
+
+export const getById = (id: string): Promise<IngredientDocument | null> =>
+  ingredientsRepo.getById(getId(id));
+
+export const add = (ingredient: IngredientDocument): Promise<IngredientDocument> =>
+  ingredientsRepo.add(new Ingredient(ingredient));
+
+export const upd = (
+  id: string,
+  ingredient: IngredientDocument
+): Promise<IngredientDocument | null> => ingredientsRepo.upd(getId(id), ingredient);
+
+export const del = (id: string): Promise<IngredientDocument | null> =>
+  ingredientsRepo.del(getId(id));
